# DaVinci

./: .gitignore  Makefile
apps/scribequery/app/: bootstrap.go
apps/scribequery/cmd/: main.go
apps/scribequery/internal/domain/chat/: interface.go  service.go
apps/scribequery/internal/handlers/: handler.go
apps/scribequery/internal/handlers/chat/: handler.go
apps/scribequery/internal/router/: server.go
apps/ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/ui/src/: App.tsx
backend/: go.mod  go.sum
backend/cmd/: main.go
backend/internal/config/: config.go  model.go
backend/internal/infra/db/vector/: weaviate.go
libs/shared-go/config/: config.go  model.go
libs/shared-go/embedding/: interface.go  model.go  service.go
libs/shared-go/infra/ai/: factory.go  interface.go  model.go
libs/shared-go/infra/ai/local/chats/: client.go  model.go
libs/shared-go/infra/ai/openai/chats/: client.go  model.go  provider.go
libs/shared-go/infra/ai/openai/embeddings/: client.go  provider.go
libs/shared-go/infra/db/vector/pinecone/: pinecone.go
libs/shared-go/infra/db/vector/weaviate/: interface.go  model.go  service.go  weaviate.go
libs/shared-rust/: Cargo.toml
libs/shared-rust/src/: lib.rs  main.rs
libs/shared-rust/src/utils/: sysinfo.rs
