[package]
name = "shared-rust"
version = "0.1.0"
edition = "2024"
description = "DaVinci shared Rust library — system utilities, telemetry, and performance-critical helpers"

[lib]
name = "shared_rust"
path = "src/lib.rs"

[[bin]]
name = "shared-rust"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"

